I have fixed the image on the page so that it doesn't overlap with the rest of the page.

--- a/css/site.css
+++ b/css/site.css
@@ -124,7 +124,7 @@ footer .bi:hover {
 /* #endregion custom button color */
 
 .app-logo {
-    max-width: 800px;
+    max-width: 600px;
 }
 
 .checklist {
